[project]
name = "comfyui-moneymaker"
description = "Some useful image&text processing nodes which help you make some Real Money!"
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/Cyber-BlackCat/ComfyUI-MoneyMaker"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cyber-bcat"
DisplayName = "Cyber-BlackCat"
Icon = "🐱"
