[project]
name = "comfyui-moneymaker"
description = "something show& tensor show nodes. Image processing nodes: ps transfer, greyscale.... Use these nodes to make some Real Money!"
version = "1.2.3"
license = {file = "LICENSE"}
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/Cyber-BlackCat/ComfyUI-MoneyMaker"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cyber-blackcat"
DisplayName = "ComfyUI-MoneyMaker"
Icon = "🐱"
